fix(viewer): Unexpected scrollbar appears when loading W3C documents
W3C documents such as https://www.w3.org/TR/wpub/ has a JavaScript script that inserts an element (`<p id="toc-nav">…</p>`) as the first element in the body element, and that caused this problem.

--- a/packages/viewer/src/scss/ui.menu-bar.scss
+++ b/packages/viewer/src/scss/ui.menu-bar.scss
@@ -718,6 +718,11 @@
     /* stylelint-disable-next-line */
     height: calc(100dvh - #{$menu-icon-height + $page-slider-height});
     width: 100vw;
+
+    #vivliostyle-welcome[hidden] + & {
+      position: absolute;
+      inset: 0;
+    }
   }
 }
 
